<resources>
    <string name="app_name">Grun\'s Task List and Other Tools</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_Add_client">Add Client</string>
    <string name="action_settings">Settings</string>
    <string name="edit_name">Name</string>
    <string name="edit_cpf" translatable="false">CPF</string>
    <string name="edit_email" translatable="false">E-Mail</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_celphone">Cel</string>
    <string name="title_activity_add_client">Add Client</string>
    <string name="nav_view_clients">View Clients</string>

</resources>
